<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/regular"
        android:text="@string/connect_friends_easily_and_quickly"
        android:textColor="@color/white"
        android:textSize="68sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/regular"
        android:text="@string/our_chat_app_is_the_perfect_way_to_stay_connected_with_friends_and_family"
        android:textColor="@color/halfWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/radialButton"
            app:cardCornerRadius="120dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:src="@drawable/facebook">

            </ImageView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/radialButton"
            app:cardCornerRadius="120dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:contentDescription="img"
                android:src="@drawable/google">

            </ImageView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/radialButton"
            app:cardCornerRadius="120dp"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:src="@drawable/apple">

            </ImageView>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </ImageView>

    <androidx.appcompat.widget.AppCompatButton

        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:id="@+id/sign"
        style="@style/lightButtonStyle"
        android:text="@string/sign_up_with_mail"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

    </androidx.appcompat.widget.AppCompatButton>

    <ImageView
        android:id="@+id/alreadyHaveAccTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@drawable/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>