<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/regular"
        android:text="@string/verification"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_margin="25dp"
        android:text="@string/enter_information_to_create_your_account_n_with_us"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTV">

    </TextView>

    <FrameLayout
        android:id="@+id/materialCardView"
        style="@style/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/img_3"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/ok"
                android:layout_marginTop="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/regular"
                android:text="@string/a_verification_code_has_been_sent_to_your_given_email_address_enter_the_code_below_to_registration_process"
                android:textAlignment="center"
                android:textSize="16sp">

            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="60dp"
                    android:layout_margin="10dp"
                    android:layout_height="60dp">
                    <EditText
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:background="@drawable/card_top_radius"
                        android:layout_height="match_parent">

                    </EditText>

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="60dp"
                    android:layout_margin="10dp"
                    android:layout_height="60dp">
                    <EditText
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:background="@drawable/card_top_radius"
                        android:layout_height="match_parent">

                    </EditText>

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="60dp"
                    android:layout_margin="10dp"
                    android:layout_height="60dp">
                    <EditText
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:background="@drawable/card_top_radius"
                        android:layout_height="match_parent">

                    </EditText>

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="60dp"
                    android:layout_margin="10dp"
                    android:layout_height="60dp">
                    <EditText
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:background="@drawable/card_top_radius"
                        android:layout_height="match_parent">

                    </EditText>

                </com.google.android.material.card.MaterialCardView>
                
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                style="@style/mainButtonStyle"
                android:layout_margin="45dp"
                android:text="Verify"

                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_height="60dp">

            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>





    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>